fix(TOS-37): address 6 PR review violations — config props, RequiredArgsConstructor, Clock, ApiErrorMessages
1. ExtractionPipelineConfig — replace @Value with ExtractionProcessingProperties
   (@ConfigurationProperties(prefix="extraction.processing"), @Positive threadPoolSize=5).
   Register ExtractionProcessingProperties in @EnableConfigurationProperties.

2. ExtractionPipelineRunner — remove explicit 4-arg constructor; annotate reductoExecutor
   field with @Qualifier("extractionProcessingExecutor") so Lombok @RequiredArgsConstructor
   copies it to the generated constructor param.

3. ExtractionPipelineRunner — replace both Collectors.toList() calls with .toList()
   (Java 16+ unmodifiable) to match the rest of the codebase.

4. ExtractionPollJob — remove explicit 3-arg constructor; add @RequiredArgsConstructor.
   Lombok generates the constructor from the three final dependency fields.

5. ExtractionApplicationServiceImpl — inject Clock bean; use OffsetDateTime.now(clock)
   instead of OffsetDateTime.now() so tests can supply a fixed clock. Add Clock bean
   (Clock.systemUTC()) to ExtractionPipelineConfig. Update ExtractionApplicationServiceImplSpec
   to construct service with a fixed Clock.fixed(...) for deterministic assertions.

6. ReductoIntermediateStatusException — replace inline hardcoded string with
   ApiErrorMessages.REDUCTO_INTERMEDIATE_STATUS constant. Add constant to both
   libs/models ApiErrorMessages (used by the exception) and libs/api-tosspaper
   ApiErrorMessages (consistency).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>